# kenyan-news

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml
data/: news.db
kenyan_news/: __init__.py  __main__.py  api.py  breaking.py  db.py  scraper.py
kenyan_news.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: briefing.sh  collect.py  collect.sh  setup-webhook.py
