[project]
name = "kenyan-news"
version = "2.0.0"
description = "Kenyan news aggregator — multi-source crawling, dedup, breaking news alerts"
requires-python = ">=3.12"
dependencies = [
    "newspaper4k>=0.9.3",
    "lxml_html_clean>=0.4",
    "pillow>=10",
    "playwright>=1.50",
    "feedparser>=6.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.34"]

[project.scripts]
kenyan-news = "kenyan_news.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["kenyan_news*"]
